# eml-sr_study

./: .gitignore  Cargo.toml  README.md  code_memo.txt  example_python.py  test.py  try_eml-sr.ipynb
eml-sr_model_second_AI/: .gitignore  Cargo.toml  LICENSE  README.md  daily_report.md  example_python.py  pyproject.toml
eml-sr_model_second_AI/benches/: search_speed.rs
eml-sr_model_second_AI/examples/: 01_simple_discovery.rs  02_multivariate.rs  03_constant_recognition.rs
eml-sr_model_second_AI/src/: config.rs  error.rs  lib.rs  main.rs  python.rs  result.rs
eml-sr_model_second_AI/src/core/: expression.rs  mod.rs  signature.rs  value.rs
eml-sr_model_second_AI/src/engine/: bfs.rs  mod.rs  optimizer.rs
eml-sr_model_second_AI/src/ops/: builtin.rs  mod.rs  operator.rs  registry.rs
eml-sr_model_second_AI/src/tests/: mod.rs
gh1_folders/: .gitignore  Dockerfile  README.md  beer-compile-report.json  exp-trained.json  pyproject.toml  requirements-lock.txt
gh1_folders/artifacts/: beer-lambert-warm-report.json  exp-trained-report.json  michaelis-menten-report.json  michaelis-menten-warm-report.json  planck-report.json  planck-warm-report.json
gh1_folders/artifacts/baselines/v1.13/: baseline-report.md  baseline-runs.csv  baseline-runs.json  dependency-locks.json  manifest.json
gh1_folders/artifacts/benchmarks/smoke/: aggregate.md  smoke-beer-warm-35bbd89a434a.json  smoke-exp-blind-44cae09389c3.json  smoke-planck-diagnostic-aaf175aaa0f7.json
gh1_folders/artifacts/campaigns/current-paper-tracks/: aggregate.md  report.md
gh1_folders/artifacts/campaigns/v1.10-logistic-evidence/: aggregate.md  v1-10-logistic-evidence-logistic-compile-c2af27a35e81.json
gh1_folders/artifacts/campaigns/v1.10-planck-diagnostics/: aggregate.md  v1-10-planck-diagnostics-planck-compile-795067919a97.json
gh1_folders/artifacts/campaigns/v1.11-logistic-planck-probes/: report.md
gh1_folders/artifacts/campaigns/v1.11-paper-training/: aggregate.md  campaign-manifest.json  report.md
gh1_folders/artifacts/campaigns/v1.12-evidence-refresh/: depth-aggregate.md  depth-suite.json  manifest.json  shallow-aggregate.md  shallow-suite.json
gh1_folders/artifacts/campaigns/v1.13-paper-tracks-final/: aggregate.md  campaign-manifest.json  report.md
gh1_folders/artifacts/campaigns/v1.15-geml-oscillatory-smoke/: aggregate.md  campaign-manifest.json  report.md
gh1_folders/artifacts/campaigns/v1.16-geml-budget-ladder/: budget-ladder.json  budget-ladder.md  failure-taxonomy.csv  failure-taxonomy.json  failure-taxonomy.md  manifest.json  source-locks.json
gh1_folders/artifacts/campaigns/v1.16-geml-pilot/: aggregate.md  campaign-manifest.json  report.md
gh1_folders/artifacts/campaigns/v1.16-geml-smoke/: aggregate.md  report.md  (+1 more)
gh1_folders/data/real/: hubble_1929_velocity_distance.csv
gh1_folders/gh1_try_eml-sr/: gh1_code1.py
gh1_folders/scripts/: publication-rebuild.sh  validate-ci-contract.py
gh1_folders/src/eml_symbolic_regression/: __init__.py  baselines.py  basin.py  benchmark.py  branch.py  campaign.py  cleanup.py  cli.py  compiler.py  datasets.py  depth_curve.py  diagnostics.py  expression.py  family_triage.py  geml_package.py  geml_theory.py  master_tree.py  motif_search.py  optimize.py  paper_assets.py  paper_decision.py  paper_diagnostics.py  paper_package.py  paper_v112.py  paper_v116.py  paper_v117.py  proof.py  proof_campaign.py  publication.py  raw_hybrid_paper.py  repair.py  semantics.py  verify.py  warm_start.py  witnesses.py
gh1_folders/tests/: test_baseline_harness.py  test_compiler_warm_start.py  test_depth_curve_targets.py  test_diagnostics.py  test_family_triage.py  test_optimizer_cleanup.py  test_paper_v116.py  test_paper_v117.py  test_proof_dataset_manifest.py  test_raw_hybrid_paper.py  test_semantics_expression.py  test_shallow_blind_proof_regression.py  test_shallow_scaled_exponential_contract.py  test_verifier_demos_cli.py
(+694 files in other folders)
