[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "eml-sr"
version = "0.1.3"
description = "Symbolic regression via the EML operator — find the math formula hidden in your data"
authors = [
    { name = "Andrzej Odrzywolek", email = "andrzej.odrzywolek@uj.edu.pl" },
    { name = "Minh Dinh Khoi", email = "minhdinhkhoi@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["symbolic-regression", "explainable-ai", "mathematics", "eml", "formula-discovery"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.maturin]
features = ["python", "full-math"]
module-name = "eml_sr_model_second_AI"
