[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eml-symbolic-regression"
version = "0.1.0"
description = "Hybrid symbolic regression over complete EML trees."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "torch>=2.10",
  "numpy>=1.26",
  "sympy>=1.14",
  "mpmath>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
eml-sr = "eml_symbolic_regression.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: slower benchmark/evidence generation tests",
]
